--- a/css/style.css
+++ b/css/style.css
@@ -606,10 +606,10 @@ p.elementor-heading-title {
 }
 
 
-section {
-    margin-top: 2px; /* Adjust this value as needed */
-    margin-bottom: 2px; /* Adjust this value as needed */
-    padding-top: 1px; /* Adjust this value as needed */
-    padding-bottom: 1px; /* Adjust this value as needed */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
 
