--- a/css/style.css
+++ b/css/style.css
@@ -724,7 +724,7 @@ header, footer {
 
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
-    color: #007BFF;
+    color: #000000;
 }
 
 /* Pagination Dots */
